[workspace]
members = [
	"example/*",
	"macros",
]

[workspace.package]
version = "0.7.0"
description = "TrenchBroom and ericw-tools integration with Bevy"
edition = "2021"
authors = ["Noxmore"]
repository = "https://github.com/Noxmore/bevy_trenchbroom"
license = "MIT OR Apache-2.0"

[package]
name = "bevy_trenchbroom"
readme = "readme.md"
categories = ["game-development"]
exclude = ["/assets", "/ci", "/compile_map.sh"]
keywords = ["bevy"]

description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[workspace.dependencies]
bevy = { version = "0.16.0", default-features = false, features = ["png"] } # For examples
nil = "0.15"
bevy_flycam = "0.15"
bevy-inspector-egui = "0.30"
enumflags2 = "0.7"

[dependencies]
bevy_trenchbroom_macros = { version = "0.7.0", path = "macros" }

anyhow = "1.0"
bevy = { version = "0.16.0", default-features = false, features = [
	"bevy_asset",
	"bevy_scene",
	"bevy_color",
] }
bevy_reflect = { version = "0.16.0", features = ["documentation"] }
bevy_mesh = "0.16.0"
wgpu-types = "24.0.0" # Must be the same version as Bevy uses
bevy_materialize = { version = "0.5.0", default-features = false, features = ["toml", "bevy_image"] }
bevy_rapier3d = { version = "0.29", optional = true }
avian3d = { version = "0.2", optional = true }
default-struct-builder = "0.5.0"
float-ord = "0.3"
image = { version = "0.25", default-features = false }
itertools = "0.14"
json = "0.12"
quake-util = { version = "0.3.2", features = ["std", "hashbrown"] }
serde = { version = "1", features = ["derive"] } # serde isn't optional because bevy_materialize requires it anyway
thiserror = "2.0"
disjoint-sets = "0.4.2"
qbsp = { version = "0.4.0", features = ["bevy_reflect", "serde"] }
# qbsp = { version = "0.3", features = ["bevy_reflect", "serde"] }
nil.workspace = true
ndshape = "0.3.0"
inventory = { version = "0.3", optional = true }
strum = { version = "0.27", features = ["derive"] }
enumflags2.workspace = true
serde_json = "1.0.140"

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = ["png", "bevy_gltf"] } # For tests
smol = "2"

[features]
default = ["client", "auto_register"]
client = ["bevy/bevy_pbr", "bevy_materialize/bevy_pbr"]
rapier = ["dep:bevy_rapier3d"]
avian = ["dep:avian3d"]
auto_register = ["dep:inventory", "bevy_trenchbroom_macros/auto_register"]

[patch.crates-io]
avian3d = { git = "https://github.com/Jondolf/avian.git", branch = "bevy-0.16" }
bevy_flycam = { git = "https://github.com/kristoff3r/bevy_flycam.git" }
bevy-inspector-egui = { git = "https://github.com/slyedoc/bevy-inspector-egui.git", branch = "main" }
bevy_rapier3d = { git = "https://github.com/mnmaita/bevy_rapier.git", branch = "mnmaita/bevy-0.16" }