[workspace]
members = ["example/*", "macros"]

[workspace.package]
version = "0.9.1"
description = "TrenchBroom and ericw-tools integration with Bevy"
edition = "2024"
authors = ["Noxmore"]
repository = "https://github.com/Noxmore/bevy_trenchbroom"
license = "MIT OR Apache-2.0"

[package]
name = "bevy_trenchbroom"
readme = "readme.md"
categories = ["game-development"]
exclude = ["/assets", "/ci", "/compile_map.sh"]
keywords = ["bevy"]

description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[workspace.dependencies]
bevy = { version = "0.16", default-features = false, features = [
	"png",
] } # For examples
nil = "0.15"
enumflags2 = "0.7"
avian3d = { version = "0.3", default-features = false, features = ["3d", "collider-from-mesh", "debug-plugin", "parallel"]}
bevy_rapier3d = "0.30"
example_commons = { path = "example/example_commons" }

[dependencies]
bevy_trenchbroom_macros = { version = "0.9.1", path = "macros" }

anyhow = "1.0"
bevy = { version = "0.16", default-features = false, features = [
	"bevy_asset",
	"bevy_scene",
	"bevy_color",
] }
bevy_reflect = { version = "0.16", features = ["documentation"] }
bevy_mesh = "0.16"
wgpu-types = "24.0.0" # Must be the same version as Bevy uses
bevy_materialize = { version = "0.7", default-features = false, features = [
	"toml",
	"bevy_image",
] }
bevy_rapier3d = { workspace = true, optional = true }
avian3d = { workspace = true, optional = true }
default-struct-builder = "0.5.0"
float-ord = "0.3"
image = { version = "0.25", default-features = false }
itertools = "0.14"
json = "0.12"
quake-util = { version = "0.4.0", features = ["std"] }
serde = { version = "1", features = [
	"derive",
] } # serde isn't optional because bevy_materialize requires it anyway
thiserror = "2.0"
disjoint-sets = "0.4.2"
qbsp = { version = "0.5", features = ["bevy_reflect", "serde"], optional = true }
nil.workspace = true
ndshape = "0.3.0"
strum = { version = "0.27", features = ["derive"] }
enumflags2.workspace = true
serde_json = "1.0.140"
atomicow = "1.1.0" # For dummy LoadContext hack, must stay the same version as Bevy's
bevy_fix_gltf_coordinate_system = "0.1"

[dev-dependencies]
bevy = { workspace = true, features = [
	"png",
	"bevy_gltf",
] } # For tests
smol = "2"
avian3d = { workspace = true, features = ["parry-f64", "f64"]}

[features]
default = ["client"]
client = ["bevy/bevy_pbr", "bevy_materialize/bevy_pbr"]
rapier = ["dep:bevy_rapier3d"]
avian = ["dep:avian3d"]
bsp = ["dep:qbsp"]
