[workspace]
members = ["example/*", "subcrates/*"]

[workspace.package]
version = "0.12.0"
edition = "2024"
authors = ["Noxmore"]
repository = "https://github.com/Noxmore/bevy_trenchbroom"
license = "MIT OR Apache-2.0"

[package]
name = "bevy_trenchbroom"
readme = "readme.md"
categories = ["game-development"]
exclude = ["/assets", "/ci", "/compile_map.sh"]
keywords = ["bevy"]
description = "TrenchBroom and ericw-tools integration with Bevy."

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[workspace.dependencies]
bevy = { version = "0.18.0", default-features = false }
nil = "0.15"
enumflags2 = "0.7"
avian3d = { version = "0.5", default-features = false, features = [
	"3d",
	"collider-from-mesh",
] }
bevy_rapier3d = "0.32" # TODO: Not updated to Bevy 0.18 yet

example_commons = { path = "example/example_commons" }
bevy_trenchbroom = { version = "0.12.0", path = ".", default-features = false }

[dependencies]
bevy_trenchbroom_macros = { version = "0.12.0", path = "subcrates/bevy_trenchbroom_macros" }

anyhow = "1"
bevy = { workspace = true, features = [
	"bevy_asset",
	"bevy_scene",
	"bevy_color",
] }
bevy_reflect = { version = "0.18.0", package = "bevy_reflect", features = ["reflect_documentation"] }
bevy_mesh = { version = "0.18.0", package = "bevy_mesh" }
wgpu-types = "27.0.0" # Must be the same version as Bevy uses
bevy_materialize = { version = "0.9", default-features = false, features = [
	"toml",
	"bevy_image",
] }
default-struct-builder = "0.5.0"
float-ord = "0.3"
image = { version = "0.25", default-features = false }
itertools = "0.14"
json = "0.12"
quake-util = { version = "0.4.0", features = ["std"] }
serde = { version = "1", features = [
	"derive",
] } # serde isn't optional because bevy_materialize requires it anyway
thiserror = "2"
disjoint-sets = "0.4.2"
qbsp = { version = "0.14", features = ["bevy_reflect", "serde"], optional = true }
nil.workspace = true
ndshape = "0.3.0"
strum = { version = "0.27", features = ["derive"] }
enumflags2.workspace = true
serde_json = "1"
atomicow = "1" # For dummy LoadContext hack, must stay the same version as Bevy's
bytemuck = "1" # For special materials, must stay the same version as Bevy's

[dev-dependencies]
# For tests
bevy = { workspace = true, features = ["png", "bevy_gltf", "reflect_auto_register"] }
smol = "2"

[features]
default = ["client"]
client = ["bevy/bevy_pbr", "bevy_materialize/bevy_pbr"]
physics-integration = []
bsp = ["dep:qbsp"]
