[package]
name = "bevy_trenchbroom_macros"

version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = "2.0.94"

[features]
auto_register = []
