[package]
name = "bevy_trenchbroom_macros"

description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
deluxe = "0.5"
heck = "0.5"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = [ "extra-traits", "parsing", "printing" ] }
