[package]
name = "avian"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "avian_example"
path = "main.rs"
test = false
bench = false
doc = false

[dependencies]
bevy = { workspace = true, features = ["default"] }
avian3d = { workspace = true }
bevy_trenchbroom = { path = "../..", default-features = false, features = [
	"avian",
	"client",
	"bsp"
] }
bevy_flycam = { workspace = true }
bevy-inspector-egui = { workspace = true }
nil.workspace = true
