[package]
name = "physics"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "physics"
path = "main.rs"
test = false
bench = false
doc = false

[dependencies]
bevy = { workspace = true, features = ["default"] }
avian3d = { workspace = true, features = ["debug-plugin"] }
bevy_trenchbroom = { workspace = true, features = [
	"client",
	"bsp",
	"avian_f32"
] }
example_commons = { workspace = true, features = ["client"] }
nil.workspace = true
