[package]
name = "bsp_loading"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "bsp_loading"
path = "main.rs"
test = false
bench = false
doc = false

[dependencies]
bevy.workspace = true
bevy_trenchbroom = { path = "../..", default-features = false, features = ["auto_register"] }
bevy_flycam = { workspace = true, optional = true }
bevy-inspector-egui = { workspace = true, optional = true }
nil.workspace = true
enumflags2.workspace = true

# Run with --no-default-features to run headless

[features]
default = ["example_client"]
example_client = ["bevy_trenchbroom/client", "dep:bevy_flycam", "dep:bevy-inspector-egui", "bevy/default"]