[package]
name = "bevy_trenchbroom_avian"
description = "Integration between `bevy_trenchbroom` and the Avian physics engine."

version = "0.13.0-dev"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "readme.md"

[dependencies]
bevy.workspace = true
bevy_trenchbroom = { workspace = true, features = ["physics-integration"] }
avian3d.workspace = true

# Unfortunately, to release on crates.io we have to specify a default here.
[features]
default = ["f32"]
f32 = ["avian3d/parry-f32"]
